--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
